--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ develop = [
     "pytest>=7.2.1",
     "pytest-cov>=4.0.0",
     "pytest-mock>=3.10.0",
+    "pytest-vcr>=1.0.2",
     "twine",
     "wheel",
 ]
