--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ plotly==5.13.1
 pytest==7.2.1
 pytest-cov==4.0.0
 pytest-mock==3.10.0
+pytest-vcr==1.0.2
 spotipy==2.22.1
 tabulate==0.9.0
 tqdm==4.64.0
