--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ repository = "https://github.com/cordeliachen/splotify"
 [project.optional-dependencies]
 develop = [
     "black>=23.1.0",
+    "bump2version>=1.0.0",
     "flake8>=6.0.0",
     "flake8-pyproject",
     "pytest>=7.2.1",
