--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = [
 build-backend="setuptools.build_meta"
 
 [project]
-name = "splotify"
+name = "Splotify"
 authors = [{name = "Cordelia Chen", email = "liachen2002@gmail.com"}]
 description="A python library for easily graphing and visualizing your Spotify data."
 readme = "README.md"
